--- a/css/hills.css
+++ b/css/hills.css
@@ -1,9 +1,15 @@
 #map {
-	bottom: 0;
+	margin: 430px 0px 0px 20px;
+	top: 35px;
+	width: 530px;
+	height:430px;
+	bottom: 0px;
+	
 	position: absolute;
-	right: 0;
-	top: 0;
-	width: 75%;
+	
+	box-shadow: 0px 0px 5px 5px #999;
+	-webkit-box-shadow: 0px 0px 5px 5px #999;
+  	-moz-box-shadow: 0px 0px 5px 5px #999;
 }
 
 .hills li {
