-Changing border color, removing drop-shadow

--- a/css/hills.css
+++ b/css/hills.css
@@ -17,10 +17,7 @@ body{
 	-webkit-border-radius: 15px;
 	-moz-border-radius: 15px;
 	border-radius: 15px;
-	
-	-webkit-box-shadow: 0px 0px 5px 5px #F90;
-	-moz-box-shadow: 0px 0px 5px 5px #F90;
-	box-shadow: 0px 0px 5px 5px #F90;
+	border-color:#0e76bd;
 }
 
 #map {
