--- a/css/hills.css
+++ b/css/hills.css
@@ -39,6 +39,32 @@ body{
   	-moz-box-shadow: 0px 0px 5px 5px #999;
 }
 
+#geo{
+	margin:5px 0 0 30px;
+}
+
+#geo-form{
+	margin: 0 0 0 30px;
+	width:300px;
+	display: inline-block;	
+}
+
+.hills{
+	margin:10px 20px 0 0;
+	height:410px;
+	width:380px;
+	padding: 10px;
+	
+	float: right;
+	display: inline;
+	
+	box-shadow: 0px 0px 5px 5px #999;
+	
+	overflow-y:scroll;
+	
+	list-style-type: none;
+}
+
 .hills li {
 	cursor: pointer;
 }
