--- a/css/hills.css
+++ b/css/hills.css
@@ -48,6 +48,28 @@ body{
 	display: inline-block;	
 }
 
+#adr{
+	width:150px;
+	display: inline-block;	
+}
+
+#adr1{
+	width:70px;
+	display: inline-block;	
+}
+
+h1{
+	width:40%;
+	margin:0 0 0 40px;
+	padding:0px;
+	
+	font-family: Arial, Helvetica, sans-serif;
+	font-size:46px;
+	color:#039;
+	
+	text-align:center;
+}
+
 .hills{
 	margin:10px 20px 0 0;
 	height:410px;
@@ -64,46 +86,69 @@ body{
 	list-style-type: none;
 }
 
+
+.distance a{
+	padding:10px 0 10px 0;
+	
+	color:#309;
+	text-decoration:none;
+	
+}
+
+
 .hills li {
 	cursor: pointer;
 }
 
-.hills li:hover {
-	background-color: #f4f3f0;
+.hills > li {
+	margin-bottom:10px;
+	
+	background-color:rgba(255,255,255,.3);	
+}
+
+.box{
+    margin:0;
+	padding:10px 0 10px 0;
+	
+	background-color: rgba(153,102,153,.3);
+}
+
+ .hills li:hover{
+	background-color:rgba(0,51,255,.3);
+	
 }
 
 .hills a,
-.hills a:link,
-.hills a:visited {
-	color: #a18f7f;
-	text-decoration: none;
+.hills a:link,{
+	padding:10px;
+    color: #66C; /*blue*/
+	line-height:50;
 }
+
 
 .hills li meter {
 	display: inline-block;
+	
 	height: 0;
 	margin: 0;
 	padding: 0;
 	width: 0;
 
-	-moz-appearance: none;
 	-webkit-appearance: none;
 	appearance: none;
 }
 
 .rater {
-	display: inline-block;
 	margin: 0;
 	padding: 0;
-	vertical-align: middle;
-
+	
+	display: inline-block;
 	list-style-type: none;
 	line-height: 1;
 }
 
 .rater-level {
 	float: left;
-
 	color: #efecd2;
 }
 
@@ -112,6 +157,10 @@ body{
 .rater-level a:visited {
 	color: #efecd2;
 	text-decoration: none
+}
+
+.rater-level li{
+ background:transparent;	
 }
 
 .rater-level a:hover,
@@ -130,6 +179,77 @@ body{
 	color: #ffe91f;
 }
 
-.info-window strong {
-	display: block;
+
+.hills li meter {
+	margin: 0;
+    padding: 1em;
+    width: 0;
+	height: 0;
+	
+    display: inline;
+    display: inline;
+    
+}
+
+/*----------------single.php---------------------*/
+h2{
+	width:70%;
+	margin:10px 0 0px 250px;
+	padding:0;
+	
+	font-family:Arial, Helvetica, sans-serif;
+	font-size:26px;
+	color:#039;
+	text-decoration:underline;
+}
+
+h3{
+	padding:0;
+	margin:0;
+	width:70%;
+	
+	font-family:Arial, Helvetica, sans-serif;
+	font-size:20px;
+	color:#039;
+	
+	text-align:center;
+	
+	text-decoration:underline;
+}	
+
+
+.ratedeco{
+	width:500px;
+	height:250px;
+	margin:10px 0 0 230px;
+	padding:10px;
+	
+	font-family:Arial, Helvetica, sans-serif;
+	font:#fff;
+	
+	line-height: 2;
+	
+	box-shadow: 0px 0px 5px 5px #999;
+	-webkit-box-shadow: 0px 0px 5px 5px #999;
+	-moz-box-shadow: 0px 0px 5px 5px #999;
+	
+}
+
+dl{
+	padding-top:10px;
+}
+
+
+#address1{
+	 float:left;
+	 width:100%;
+	 
+	 font-family:Arial, Helvetica, sans-serif;
+}
+ 
+#address{
+	 float:left;
+	 width:30%;
+	 
+	 font-family:Arial, Helvetica, sans-serif;
 }
