--- a/css/hills.css
+++ b/css/hills.css
@@ -39,21 +39,23 @@ body{
 }
 
 #geo{
-	margin:5px 0 0 30px;
+	margin:410px 0 0 30px;
 }
 
 #geo-form{
-	margin: 0 0 0 30px;
+	margin: 410 0 0 30px;
 	width:300px;
 	display: inline-block;	
 }
 
 #adr{
+	margin: 410 0 0 0;
 	width:150px;
 	display: inline-block;	
 }
 
 #adr1{
+	margin: 410 0 0 0;
 	width:70px;
 	display: inline-block;	
 }
@@ -71,7 +73,7 @@ h1{
 }
 
 .hills{
-	margin:430px 20px 0 0;
+	margin:380px 20px 0 0;
 	height:410px;
 	width:380px;
 	padding: 10px;
