--- a/css/hills.css
+++ b/css/hills.css
@@ -39,23 +39,23 @@ body{
 }
 
 #geo{
-	margin:410px 0 0 30px;
+	margin:350px 0 0 30px;
 }
 
 #geo-form{
-	margin: 410 0 0 30px;
+	margin: 350px 0 0 30px;
 	width:300px;
 	display: inline-block;	
 }
 
 #adr{
-	margin: 410 0 0 0;
+	margin: 350px 0 0 0;
 	width:150px;
 	display: inline-block;	
 }
 
 #adr1{
-	margin: 410 0 0 0;
+	margin: 350px 0 0 0;
 	width:70px;
 	display: inline-block;	
 }
