--- a/css/hills.css
+++ b/css/hills.css
@@ -38,6 +38,10 @@ body{
   	-moz-box-shadow: 0px 0px 5px 5px #999;
 }
 
+.sin1 {
+	margin: 0 0 0 20px;
+}
+
 #geo{
 	margin:100px 0 0 30px;
 }
@@ -61,19 +65,17 @@ body{
 }
 
 h1{
-	width:40%;
 	margin:0 0 0 40px;
 	padding:0px;
+	align:right;
 	
 	font-family: Arial, Helvetica, sans-serif;
 	font-size:46px;
-	color:#039;
-	
-	text-align:center;
+	color:#FFF;
 }
 
 .hills{
-	margin:350px 20px 0 0;
+	margin:300px 20px 0 0;
 	height:410px;
 	width:380px;
 	padding: 10px;
