--- a/css/hills.css
+++ b/css/hills.css
@@ -65,9 +65,9 @@ body{
 }
 
 h1{
-	margin:0 0 0 40px;
+	margin:60px 40 0 0px;
 	padding:0px;
-	align:right;
+	float:right;
 	
 	font-family: Arial, Helvetica, sans-serif;
 	font-size:46px;
@@ -75,7 +75,7 @@ h1{
 }
 
 .hills{
-	margin:300px 20px 0 0;
+	margin:280px 20px 0 0;
 	height:410px;
 	width:380px;
 	padding: 10px;
