--- a/css/hills.css
+++ b/css/hills.css
@@ -65,9 +65,9 @@ body{
 }
 
 h1{
-	margin:60px 40 0 0px;
+	margin:60px 40px 0 0px;
 	padding:0px;
-	float:right;
+	float: clear-right;
 	
 	font-family: Arial, Helvetica, sans-serif;
 	font-size:46px;
