--- a/css/hills.css
+++ b/css/hills.css
@@ -68,6 +68,7 @@ h1{
 	margin:60px 15px 0 0px;
 	padding:0px;
 	float: clear-right;
+	text-align:right;
 	
 	font-family: Arial, Helvetica, sans-serif;
 	font-size:46px;
@@ -75,7 +76,7 @@ h1{
 }
 
 .hills{
-	margin:270px 20px 0 0;
+	margin:250px 20px 0 0;
 	height:410px;
 	width:380px;
 	padding: 10px;
