--- a/css/hills.css
+++ b/css/hills.css
@@ -11,6 +11,7 @@ body{
 	width:1000px;
 	height:800px;
 	
+	background-color:#FFF;
 	background-image:url(../images/background.png);
 	background-repeat: no-repeat;
 	
